--- a/docs/visual-basic/misc/bc30199.md
+++ b/docs/visual-basic/misc/bc30199.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30199
 ms.assetid: 33de46cd-6e7a-4852-baab-dc0e195d9b09
-ms.openlocfilehash: 8f15760af3a5e2c7a58148742b17f67afe4fc038
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 92f105135dd6a03b1211791364a2c743ec6514e0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771510"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54699274"
 ---
-# <a name="-expected"></a><span data-ttu-id="1cf8c-102">'('가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="1cf8c-102">'(' expected</span></span>
-<span data-ttu-id="1cf8c-103">프로시저 호출의 인수 목록이 여는 괄호(`(`) 문자로 시작하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="1cf8c-103">An argument list in a procedure call does not begin with an opening parenthesis (`(`) character.</span></span>  
+# <a name="-expected"></a><span data-ttu-id="ecbe9-102">'('가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="ecbe9-102">'(' expected</span></span>
+<span data-ttu-id="ecbe9-103">프로시저 호출의 인수 목록이 여는 괄호(`(`) 문자로 시작하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ecbe9-103">An argument list in a procedure call does not begin with an opening parenthesis (`(`) character.</span></span>  
   
- <span data-ttu-id="1cf8c-104">**오류 ID:** BC30199</span><span class="sxs-lookup"><span data-stu-id="1cf8c-104">**Error ID:** BC30199</span></span>  
+ <span data-ttu-id="ecbe9-104">**오류 ID:** BC30199</span><span class="sxs-lookup"><span data-stu-id="ecbe9-104">**Error ID:** BC30199</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1cf8c-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1cf8c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ecbe9-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ecbe9-105">To correct this error</span></span>  
   
--   <span data-ttu-id="1cf8c-106">목록의 시작 부분에 여는 괄호 문자를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="1cf8c-106">Add an opening parenthesis character to the beginning of the list.</span></span>  
+-   <span data-ttu-id="ecbe9-106">목록의 시작 부분에 여는 괄호 문자를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="ecbe9-106">Add an opening parenthesis character to the beginning of the list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1cf8c-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1cf8c-107">See Also</span></span>  
- [<span data-ttu-id="1cf8c-108">프로시저 매개 변수 및 인수</span><span class="sxs-lookup"><span data-stu-id="1cf8c-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+## <a name="see-also"></a><span data-ttu-id="ecbe9-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="ecbe9-107">See also</span></span>
+- [<span data-ttu-id="ecbe9-108">프로시저 매개 변수 및 인수</span><span class="sxs-lookup"><span data-stu-id="ecbe9-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
