--- a/docs/visual-basic/misc/bc30474.md
+++ b/docs/visual-basic/misc/bc30474.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30474
 ms.assetid: 7277e8cc-aa3c-40c3-8682-c8c42d2ee921
-ms.openlocfilehash: 87cc38e02929d4cfdfa1f1d37fcdc9816c49231d
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 03407c7d7bac56c5d52a210822da7fc7eb7e7f3a
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781585"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54503264"
 ---
-# <a name="ltmethod1gt-cannot-override-ltmethod2gt-because-it-is-a-declare-statement"></a><span data-ttu-id="52c69-102">'&lt;method1&gt;'를 재정의할 수 없습니다'&lt;method2&gt;'는 'Declare' 문 이므로</span><span class="sxs-lookup"><span data-stu-id="52c69-102">'&lt;method1&gt;' cannot override '&lt;method2&gt;' because it is a 'Declare' statement</span></span>
-<span data-ttu-id="52c69-103">`Declare` 문으로 선언된 기본 클래스 이름의 대리자를 재정의하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="52c69-103">You attempted to override a delegate on the base class name that was declared with a `Declare` statement.</span></span>  
+# <a name="ltmethod1gt-cannot-override-ltmethod2gt-because-it-is-a-declare-statement"></a><span data-ttu-id="45db9-102">'&lt;method1&gt;'를 재정의할 수 없습니다'&lt;method2&gt;'는 'Declare' 문 이므로</span><span class="sxs-lookup"><span data-stu-id="45db9-102">'&lt;method1&gt;' cannot override '&lt;method2&gt;' because it is a 'Declare' statement</span></span>
+<span data-ttu-id="45db9-103">`Declare` 문으로 선언된 기본 클래스 이름의 대리자를 재정의하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="45db9-103">You attempted to override a delegate on the base class name that was declared with a `Declare` statement.</span></span>  
   
- <span data-ttu-id="52c69-104">**오류 ID:** BC30474</span><span class="sxs-lookup"><span data-stu-id="52c69-104">**Error ID:** BC30474</span></span>  
+ <span data-ttu-id="45db9-104">**오류 ID:** BC30474</span><span class="sxs-lookup"><span data-stu-id="45db9-104">**Error ID:** BC30474</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="52c69-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="52c69-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="45db9-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="45db9-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="52c69-106">재정의된 멤버를 `Declare` 문이 아니도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="52c69-106">Change the overridden member so it is not a `Declare` statement.</span></span>  
+1.  <span data-ttu-id="45db9-106">재정의된 멤버를 `Declare` 문이 아니도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="45db9-106">Change the overridden member so it is not a `Declare` statement.</span></span>  
   
-2.  <span data-ttu-id="52c69-107">이 메서드를 재정의하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="52c69-107">Do not try to override this method.</span></span>  
+2.  <span data-ttu-id="45db9-107">이 메서드를 재정의하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="45db9-107">Do not try to override this method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="52c69-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="52c69-108">See Also</span></span>  
- [<span data-ttu-id="52c69-109">Declare 문</span><span class="sxs-lookup"><span data-stu-id="52c69-109">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)  
- [<span data-ttu-id="52c69-110">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="52c69-110">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a><span data-ttu-id="45db9-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="45db9-108">See also</span></span>
+- [<span data-ttu-id="45db9-109">Declare 문</span><span class="sxs-lookup"><span data-stu-id="45db9-109">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
+- [<span data-ttu-id="45db9-110">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="45db9-110">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
