--- a/docs/visual-basic/misc/bc30782.md
+++ b/docs/visual-basic/misc/bc30782.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30782
 ms.assetid: c6b35e63-4d84-449d-9685-41a1bc0a7f35
-ms.openlocfilehash: 023b645a3119b583512dfa7b14602aba639f8443
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 13e8085de63ff9dcf6e51d5821af8620ab63a487
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784237"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54518025"
 ---
-# <a name="continue-do-can-only-appear-inside-a-do-statement"></a><span data-ttu-id="dafb6-102">'Continue Do'는 'Do' 문 내부에만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="dafb6-102">'Continue Do' can only appear inside a 'Do' statement</span></span>
-<span data-ttu-id="dafb6-103">`Continue Do` 문은 `Do...Loop` 루프 내에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="dafb6-103">A `Continue Do` statement can only appear within a `Do...Loop` loop.</span></span>  
+# <a name="continue-do-can-only-appear-inside-a-do-statement"></a><span data-ttu-id="71a52-102">'Continue Do'는 'Do' 문 내부에만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="71a52-102">'Continue Do' can only appear inside a 'Do' statement</span></span>
+<span data-ttu-id="71a52-103">`Continue Do` 문은 `Do...Loop` 루프 내에서만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="71a52-103">A `Continue Do` statement can only appear within a `Do...Loop` loop.</span></span>  
   
- <span data-ttu-id="dafb6-104">**오류 ID:** BC30782</span><span class="sxs-lookup"><span data-stu-id="dafb6-104">**Error ID:** BC30782</span></span>  
+ <span data-ttu-id="71a52-104">**오류 ID:** BC30782</span><span class="sxs-lookup"><span data-stu-id="71a52-104">**Error ID:** BC30782</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="dafb6-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="dafb6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="71a52-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="71a52-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="dafb6-106">`Continue Do` 문이 `For...Next` 루프에 있는 경우 해당 문을 `Continue For`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="dafb6-106">If the `Continue Do` statement is in a `For...Next` loop, change the statement to `Continue For`.</span></span>  
+1.  <span data-ttu-id="71a52-106">`Continue Do` 문이 `For...Next` 루프에 있는 경우 해당 문을 `Continue For`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="71a52-106">If the `Continue Do` statement is in a `For...Next` loop, change the statement to `Continue For`.</span></span>  
   
-2.  <span data-ttu-id="dafb6-107">`Continue Do` 문이 `While...End While` 루프에 있는 경우 해당 문을 `Continue While`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="dafb6-107">If the `Continue Do` statement is in a `While...End While` loop, change the statement to `Continue While`.</span></span>  
+2.  <span data-ttu-id="71a52-107">`Continue Do` 문이 `While...End While` 루프에 있는 경우 해당 문을 `Continue While`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="71a52-107">If the `Continue Do` statement is in a `While...End While` loop, change the statement to `Continue While`.</span></span>  
   
-3.  <span data-ttu-id="dafb6-108">그렇지 않으면 `Continue Do` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="dafb6-108">Otherwise, remove the `Continue Do` statement.</span></span>  
+3.  <span data-ttu-id="71a52-108">그렇지 않으면 `Continue Do` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="71a52-108">Otherwise, remove the `Continue Do` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="dafb6-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="dafb6-109">See Also</span></span>  
- [<span data-ttu-id="dafb6-110">Continue 문</span><span class="sxs-lookup"><span data-stu-id="dafb6-110">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)  
- [<span data-ttu-id="dafb6-111">Do...Loop 문</span><span class="sxs-lookup"><span data-stu-id="dafb6-111">Do...Loop Statement</span></span>](../../visual-basic/language-reference/statements/do-loop-statement.md)
+## <a name="see-also"></a><span data-ttu-id="71a52-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="71a52-109">See also</span></span>
+- [<span data-ttu-id="71a52-110">Continue 문</span><span class="sxs-lookup"><span data-stu-id="71a52-110">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)
+- [<span data-ttu-id="71a52-111">Do...Loop 문</span><span class="sxs-lookup"><span data-stu-id="71a52-111">Do...Loop Statement</span></span>](../../visual-basic/language-reference/statements/do-loop-statement.md)
