--- a/docs/visual-basic/misc/bc30814.md
+++ b/docs/visual-basic/misc/bc30814.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30814
 ms.assetid: fef2d78f-39ba-4aad-93b3-c7a08df9f805
-ms.openlocfilehash: 1de2a9dfa84b69997232a11c623a8af22bc34535
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c128bff7622590c8ad1c10d686a0a23097c90b35
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53760863"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54697558"
 ---
-# <a name="gosub-statements-are-no-longer-supported"></a><span data-ttu-id="a2f4a-102">'GoSub' 문은 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="a2f4a-102">'GoSub' statements are no longer supported</span></span>
-<span data-ttu-id="a2f4a-103">`GoSub` 를 사용하여 프로시저를 호출할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a2f4a-103">`GoSub` cannot be used to call a procedure.</span></span>  
+# <a name="gosub-statements-are-no-longer-supported"></a><span data-ttu-id="d1db8-102">'GoSub' 문은 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="d1db8-102">'GoSub' statements are no longer supported</span></span>
+<span data-ttu-id="d1db8-103">`GoSub` 를 사용하여 프로시저를 호출할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d1db8-103">`GoSub` cannot be used to call a procedure.</span></span>  
   
- <span data-ttu-id="a2f4a-104">**오류 ID:** BC30814</span><span class="sxs-lookup"><span data-stu-id="a2f4a-104">**Error ID:** BC30814</span></span>  
+ <span data-ttu-id="d1db8-104">**오류 ID:** BC30814</span><span class="sxs-lookup"><span data-stu-id="d1db8-104">**Error ID:** BC30814</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a2f4a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a2f4a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d1db8-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d1db8-105">To correct this error</span></span>  
   
--   <span data-ttu-id="a2f4a-106">`GoSub`를 사용하지 않고 프로시저를 직접 호출합니다. 예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="a2f4a-106">Call procedures directly without using `GoSub`; for example:</span></span>  
+-   <span data-ttu-id="d1db8-106">`GoSub`를 사용하지 않고 프로시저를 직접 호출합니다. 예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="d1db8-106">Call procedures directly without using `GoSub`; for example:</span></span>  
   
     ```  
     CalculateInterest(Amount, Rate, Time)  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="a2f4a-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a2f4a-107">See Also</span></span>  
- [<span data-ttu-id="a2f4a-108">절차</span><span class="sxs-lookup"><span data-stu-id="a2f4a-108">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
+## <a name="see-also"></a><span data-ttu-id="d1db8-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="d1db8-107">See also</span></span>
+- [<span data-ttu-id="d1db8-108">절차</span><span class="sxs-lookup"><span data-stu-id="d1db8-108">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
