--- a/docs/visual-basic/misc/bc31025.md
+++ b/docs/visual-basic/misc/bc31025.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31025
 ms.assetid: 0ed0efdb-f901-4773-b258-5a6459bd36e0
-ms.openlocfilehash: 21e0207cf12cc1b760fb12400a6db13fb7530b3b
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 10c491712d0bac91cf9202937b12300b2e1f1cc9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53757600"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54685514"
 ---
-# <a name="unable-to-open-key-file-ltfilenamegt-lterrorgt"></a><span data-ttu-id="3417d-102">키 파일을 열 수 없습니다. '&lt;filename&gt;': &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="3417d-102">Unable to open key file '&lt;filename&gt;': &lt;error&gt;</span></span>
-<span data-ttu-id="3417d-103">이 프로젝트에 대해 지정된 키 파일을 열 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3417d-103">The key file specified for this project could not be opened.</span></span>  
+# <a name="unable-to-open-key-file-ltfilenamegt-lterrorgt"></a><span data-ttu-id="8ca15-102">키 파일을 열 수 없습니다. '&lt;filename&gt;': &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="8ca15-102">Unable to open key file '&lt;filename&gt;': &lt;error&gt;</span></span>
+<span data-ttu-id="8ca15-103">이 프로젝트에 대해 지정된 키 파일을 열 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8ca15-103">The key file specified for this project could not be opened.</span></span>  
   
- <span data-ttu-id="3417d-104">**오류 ID:** BC31025</span><span class="sxs-lookup"><span data-stu-id="3417d-104">**Error ID:** BC31025</span></span>  
+ <span data-ttu-id="8ca15-104">**오류 ID:** BC31025</span><span class="sxs-lookup"><span data-stu-id="8ca15-104">**Error ID:** BC31025</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3417d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3417d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8ca15-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8ca15-105">To correct this error</span></span>  
   
--   <span data-ttu-id="3417d-106">키 파일이 있고, 다른 응용 프로그램에 의해 잠기지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="3417d-106">Verify that the key file exists, and is not locked by another application.</span></span>  
+-   <span data-ttu-id="8ca15-106">키 파일이 있고, 다른 애플리케이션에 의해 잠기지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="8ca15-106">Verify that the key file exists, and is not locked by another application.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3417d-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3417d-107">See Also</span></span>  
- <span data-ttu-id="3417d-108">[Sn.exe (강력한 이름 도구)] [Sn.exe (강력한 이름 도구)](../../framework/tools/sn-exe-strong-name-tool.md))</span><span class="sxs-lookup"><span data-stu-id="3417d-108">[Sn.exe (Strong Name Tool)][Sn.exe (Strong Name Tool)](../../framework/tools/sn-exe-strong-name-tool.md))</span></span>  
- 
+## <a name="see-also"></a><span data-ttu-id="8ca15-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="8ca15-107">See also</span></span>
+- <span data-ttu-id="8ca15-108">[Sn.exe (강력한 이름 도구)] [Sn.exe (강력한 이름 도구)](../../framework/tools/sn-exe-strong-name-tool.md))</span><span class="sxs-lookup"><span data-stu-id="8ca15-108">[Sn.exe (Strong Name Tool)][Sn.exe (Strong Name Tool)](../../framework/tools/sn-exe-strong-name-tool.md))</span></span>
+
