--- a/docs/visual-basic/misc/bc33029.md
+++ b/docs/visual-basic/misc/bc33029.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC33029
 ms.assetid: 0d0ee461-dd48-424b-b83a-484bfc648d4d
-ms.openlocfilehash: c94797adaecc2a46eb063d88a020d9e652b9db13
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: aa1b05bb5399c65aea98a14d3748f88ebf8b8437
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630866"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54607581"
 ---
-# <a name="conversion-operators-cannot-convert-from-an-interface-type"></a><span data-ttu-id="8e79a-102">변환 연산자는 인터페이스 형식에서 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-102">Conversion operators cannot convert from an interface type</span></span>
-<span data-ttu-id="8e79a-103">매개 변수에 인터페이스 형식을 사용하여 변환 연산자를 선언했습니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-103">A conversion operator is declared with an interface type for the parameter.</span></span>  
+# <a name="conversion-operators-cannot-convert-from-an-interface-type"></a><span data-ttu-id="3af41-102">변환 연산자는 인터페이스 형식에서 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-102">Conversion operators cannot convert from an interface type</span></span>
+<span data-ttu-id="3af41-103">매개 변수에 인터페이스 형식을 사용하여 변환 연산자를 선언했습니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-103">A conversion operator is declared with an interface type for the parameter.</span></span>  
   
- <span data-ttu-id="8e79a-104">컴파일 타임에 Visual Basic은 인터페이스에서 참조 형식으로 미리 정의 된 변환이 있는 간주 합니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-104">At compile time, Visual Basic considers a predefined conversion to exist from any interface to any reference type.</span></span> <span data-ttu-id="8e79a-105">이러한 변환은 런타임에 실패할 수 있지만 컴파일러에서 런타임 결과를 예측할 수 없으므로 이러한 변환의 컴파일을 허용합니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-105">Such a conversion might fail at run time, but the compiler cannot predict run-time results, so it allows any such conversion to compile.</span></span>  
+ <span data-ttu-id="3af41-104">컴파일 타임에 Visual Basic 인터페이스에서 참조 형식으로 미리 정의 된 변환이 있는 고려 합니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-104">At compile time, Visual Basic considers a predefined conversion to exist from any interface to any reference type.</span></span> <span data-ttu-id="3af41-105">이러한 변환은 런타임에 실패할 수 있지만 컴파일러에서 런타임 결과를 예측할 수 없으므로 이러한 변환의 컴파일을 허용합니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-105">Such a conversion might fail at run time, but the compiler cannot predict run-time results, so it allows any such conversion to compile.</span></span>  
   
- <span data-ttu-id="8e79a-106">컴파일러에서는 이 변환이 이미 정의되어 있다고 간주하므로 다시 정의할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-106">Because the compiler considers this conversion to be already defined, it does not allow you to redefine it.</span></span>  
+ <span data-ttu-id="3af41-106">컴파일러에서는 이 변환이 이미 정의되어 있다고 간주하므로 다시 정의할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-106">Because the compiler considers this conversion to be already defined, it does not allow you to redefine it.</span></span>  
   
- <span data-ttu-id="8e79a-107">**오류 ID:** BC33029</span><span class="sxs-lookup"><span data-stu-id="8e79a-107">**Error ID:** BC33029</span></span>  
+ <span data-ttu-id="3af41-107">**오류 ID:** BC33029</span><span class="sxs-lookup"><span data-stu-id="3af41-107">**Error ID:** BC33029</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8e79a-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8e79a-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3af41-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3af41-108">To correct this error</span></span>  
   
--   <span data-ttu-id="8e79a-109">이 연산자 정의를 완전히 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-109">Remove this operator definition entirely.</span></span> <span data-ttu-id="8e79a-110">이미 미리 정의되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8e79a-110">It is already predefined.</span></span>  
+-   <span data-ttu-id="3af41-109">이 연산자 정의를 완전히 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-109">Remove this operator definition entirely.</span></span> <span data-ttu-id="3af41-110">이미 미리 정의되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-110">It is already predefined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8e79a-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="8e79a-111">See Also</span></span>  
- [<span data-ttu-id="8e79a-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="8e79a-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="8e79a-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="8e79a-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="8e79a-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="8e79a-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="8e79a-115">방법: 변환 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="8e79a-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="3af41-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="3af41-111">See also</span></span>
+- [<span data-ttu-id="3af41-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="3af41-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="3af41-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="3af41-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="3af41-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="3af41-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="3af41-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="3af41-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
