--- a/docs/visual-basic/misc/bc36643.md
+++ b/docs/visual-basic/misc/bc36643.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36643
 ms.assetid: 34b6141b-6eab-4641-a3f4-53ef28c1792b
-ms.openlocfilehash: 66e9e78cd26b748e504d3cf1772822e57857a5c5
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 4e0b4081fcc450d2bf63f0cd795853c1c53093a4
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33631721"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54717846"
 ---
-# <a name="array-modifiers-cannot-be-specified-on-lambda-expression-parameters-name-only-on-its-type"></a><span data-ttu-id="2e5f1-102">람다 식 매개 변수 이름에는 배열 한정자를 지정할 수 없습니다. 해당 형식에만 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="2e5f1-102">Array modifiers cannot be specified on lambda expression parameters name, only on its type</span></span>
-<span data-ttu-id="2e5f1-103">배열 인수를 람다 식으로 보낼 수 있지만 매개 변수 선언에 요소 형식이 포함되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="2e5f1-103">Array arguments can be sent to lambda expressions, but the parameter declaration must include the element type.</span></span>  
+# <a name="array-modifiers-cannot-be-specified-on-lambda-expression-parameters-name-only-on-its-type"></a><span data-ttu-id="e12ac-102">람다 식 매개 변수 이름에는 배열 한정자를 지정할 수 없습니다. 해당 형식에만 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="e12ac-102">Array modifiers cannot be specified on lambda expression parameters name, only on its type</span></span>
+<span data-ttu-id="e12ac-103">배열 인수를 람다 식으로 보낼 수 있지만 매개 변수 선언에 요소 형식이 포함되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="e12ac-103">Array arguments can be sent to lambda expressions, but the parameter declaration must include the element type.</span></span>  
   
 ```vb  
 ' Not valid.  
@@ -26,11 +26,11 @@ Dim arrayExample2 = Function(arrayPara() As Integer) arrayPara.Length > 0
 Dim arrayexample3 = Function(arrayPara As Integer()) arrayPara.Length > 0  
 ```  
   
- <span data-ttu-id="2e5f1-104">**오류 ID:** BC36643</span><span class="sxs-lookup"><span data-stu-id="2e5f1-104">**Error ID:** BC36643</span></span>  
+ <span data-ttu-id="e12ac-104">**오류 ID:** BC36643</span><span class="sxs-lookup"><span data-stu-id="e12ac-104">**Error ID:** BC36643</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2e5f1-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2e5f1-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e12ac-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e12ac-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2e5f1-106">배열 매개 변수에 요소의 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="2e5f1-106">Specify the type of the elements in the array parameter.</span></span>  
+-   <span data-ttu-id="e12ac-106">배열 매개 변수에 요소의 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="e12ac-106">Specify the type of the elements in the array parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2e5f1-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="2e5f1-107">See Also</span></span>  
- [<span data-ttu-id="2e5f1-108">람다 식</span><span class="sxs-lookup"><span data-stu-id="2e5f1-108">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+## <a name="see-also"></a><span data-ttu-id="e12ac-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="e12ac-107">See also</span></span>
+- [<span data-ttu-id="e12ac-108">람다 식</span><span class="sxs-lookup"><span data-stu-id="e12ac-108">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
